updated package.json file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Homework_FriendFinder",
+  "name": "FriendFinder",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
